# nyc-hpd-violations

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
output/: bronx_c_violations.parquet  violations_raw.parquet
scripts/: 01_download_violations.py  02_download_pluto.py  03_filter_violations.py  04_merge_pluto.py  05_clean_descriptions.py
