[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nyc-hpd-violations"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = ["pandas>=2", "pyarrow>=15", "pre-commit"]
authors = [{ name = "Ben Welsh", email = "b@palewi.re" }]
description = "Download and process NYC Housing Maintenance Code Violations from NYC Open Data"
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
keywords = ["data journalism", "nyc", "housing", "hpd", "open data"]

[project.urls]
Documentation = "https://github.com/palewire/nyc-hpd-violations"
Maintainer = "https://github.com/palewire/"
Source = "https://github.com/palewire/nyc-hpd-violations/"
Issues = "https://github.com/palewire/nyc-hpd-violations/issues/"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
